update-reality
